--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,9 @@
 Flask==2.1.1
+click>=7.1.2
+Werkzeug>=2.0
+Jinja2>=3.0
+itsdangerous>=2.0
+MarkupSafe>=2.0
 gunicorn==20.1.0
 validators==0.22.0
 pynamodb==6.0.0
